<resources>
    <string name="app_name">Hotel Advisor</string>
    <string name ="title_app">HOTEL ADVISOR </string>
    <string name ="welcome">WELCOME TO</string>
    <string name="invalid_email">invalid email</string>
    <string name="loading">Loading...</string>
    <string name="empty_fields">empty fields! All fields are required</string>
    <string name="base_url">http://192.168.1.121:8080/hotel_review/api</string> <!--10.0.2.2 perche android gira su una macchina virtuale -->
    <string name="something_went_wrong">500 internal server error</string>
    <string name="passwords_not_match">Passwords entered do not match</string>
    <string name="password_too_short">Password must have at least 7 characters</string>
    <string name="signin_ok">Your account has been registered successfully</string>
    <string name="login_ok">Login successfully</string>
    <string name="username_or_password_wrong">Your username or password is incorrect</string>
    <string name="password_wrong">Your old password is incorrect</string>
    <string name="Conflict">This username already exists</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="username">Username:</string>
    <string name ="password">Password: </string>
    <string name ="confirm_password">Confirm password: </string>
    <string name ="old_password">Old password: </string>
    <string name ="new_password">New password: </string>
    <string name="update_profile">Update profile</string>
    <string name="login">Login</string>
    <string name ="go_to_sign_in">Go to signIn</string>
    <string name ="review_ok">Your review is inserted successfully</string>
    <string name ="review_already_in_DB">You have already done a review for this hotel</string>
    <string name ="zipCode_5_numeric">Zip Code must have 5 numeric characters</string>
    <string name ="delete_user_ok">Your account is deleted successfully </string>




    <string name="update_user_ok">Your profile is updated successfully</string>
    <string name="update_password_ok">Your password is updated successfully</string>
    <string name="new_password_equal_old_password">Your old and new passwords are equals</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">save</string>
    <string name="my_reviews">my reviews</string>
    <string name="logout">logout</string>
    <string name="rating_review">review rate</string>
    <string name="delete">user deleted successfully</string>
    <string name="user_not_found">User not found</string>
    <string name="role">Role updated successfully</string>
    <string name="add_review">add review</string>
    <string name ="title">Title </string>
    <string name ="text">Text </string>
    <string name ="hotel">Hotel </string>
    <string name ="zipCode">Zip code </string>
    <string name ="enter">Enter </string>
    <string name="no_reviews_hotel">there are no reviews for this hotel</string>
    <string name="home">home</string>
    <string name="delete_reviews">reviews deleted successfully</string>
    <string name="changePassword">update password</string>
    <string name="old_username">old username</string>
    <string name="new_username">new username</string>
    <string name="confirm_username">confirm username</string>
    <string name="username_wrong">wrong username</string>
    <string name="changeUsername">update username</string>
    <string name="username_dont_match">username do not match</string>
    <string name="new_username_equal_old_username">username cannot be same as the previous one</string>
    <string name="update_username_ok">username updated successfullly</string>


</resources>