<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/transparent">

                <!-- Media -->

                <ImageButton
                    android:id="@+id/logoutBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="right"
                    android:contentDescription="@string/logout"
                    android:src="@drawable/logout_icon_icons_com_51025" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription=""
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon1" />




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp">


                    <Button
                        android:id="@+id/myReviewsBtn"
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginTop="60dp"
                        android:layout_marginRight="65dp"
                        android:text="@string/aggiungiRecensione" />

                    <Button
                        android:id="@+id/updateBtn"

                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/update_profile">

                    </Button>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:text="@string/name"
                        android:textColor="@color/white"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:id="@+id/name_txo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text=""
                        android:textColor="@color/white"
                        android:textAppearance="?attr/textAppearanceHeadline5" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:text="@string/surname"
                        android:textColor="@color/white"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:id="@+id/surname_txo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text=""
                        android:textColor="@color/white"
                        android:textAppearance="?attr/textAppearanceHeadline5" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:text="@string/email"
                        android:textColor="@color/white"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:id="@+id/email_txo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text=""
                        android:textColor="@color/white"
                        android:textAppearance="?attr/textAppearanceHeadline5" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:text="@string/address"
                        android:textColor="@color/white"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:id="@+id/address_txo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text=""
                        android:textColor="@color/white"
                        android:textAppearance="?attr/textAppearanceHeadline5" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:text="@string/phone"
                        android:textColor="@color/white"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:id="@+id/phone_txo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text=""
                        android:textColor="@color/white"
                        android:textAppearance="?attr/textAppearanceHeadline5" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:text="@string/username"
                        android:textColor="@color/white"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:id="@+id/username_txo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text=""
                        android:textColor="@color/white"
                        android:textAppearance="?attr/textAppearanceHeadline5" />


                </LinearLayout>

            </LinearLayout>




    </ScrollView>
</RelativeLayout>